# Ray-Tracer

./: .gitignore  CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/nlohmann_json/: CMakeLists.txt
dependencies/stb/: CMakeLists.txt
src/: main.cpp
src/application/: app.cpp  app.h  application.cpp  application.h  movable_camera.cpp  movable_camera.h  renderer.cpp  renderer.h
src/core/: camera.cpp  camera.h  fix_camera.cpp  fix_camera.h  image.cpp  image.h  scene.cpp  scene.h
src/materials/: lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h
src/shapes/: hittable.cpp  hittable.h  light.cpp  light.h  plan.cpp  plan.h  sphere.cpp  sphere.h
src/utils/: color.cpp  color.h  math.cpp  math.h  ray.cpp  ray.h  vec3.cpp  vec3.h
